--- a/index.html
+++ b/index.html
@@ -402,12 +402,12 @@
                     <div class="info-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <h3>Indirizzo</h3>
-                        <p>Via Giuseppe Saragat, Castellaneta</p>
+                        <p>Via roma 123</p>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-phone"></i>
                         <h3>Telefono</h3>
-                        <p>+39 327 433 7877</p>
+                        <p>+39 333 333 3333</p>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-envelope"></i>
@@ -419,7 +419,7 @@
                 <!-- Mappa Google con controlli ridotti -->
                 <div class="map-container">
                     <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.7459956083!2d16.93799797677216!3d40.63020397139125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1347983333f0d3f7%3A0x3c7e4050c9c3fc0c!2sVia%20Giuseppe%20Saragat%2C%2074011%20Castellaneta%20TA!5e0!3m2!1sit!2sit!4v1709641145899!5m2!1sit!2sit&maptype=roadmap&style=feature:all|element:geometry|color:0xf5f5f5&style=feature:all|element:labels.text.fill|color:0x616161&style=feature:all|element:labels.text.stroke|color:0xf5f5f5&style=feature:administrative.land_parcel|element:labels.text.fill|color:0xbdbdbd&style=feature:poi|element:geometry|color:0xeeeeee&style=feature:poi|element:labels.text.fill|color:0x757575&style=feature:poi.park|element:geometry|color:0xe5e5e5&style=feature:poi.park|element:labels.text.fill|color:0x9e9e9e&style=feature:road|element:geometry|color:0xffffff&style=feature:road.arterial|element:labels.text.fill|color:0x757575&style=feature:road.highway|element:geometry|color:0xdadada&style=feature:road.highway|element:labels.text.fill|color:0x616161&style=feature:road.local|element:labels.text.fill|color:0x9e9e9e&style=feature:transit.line|element:geometry|color:0xe5e5e5&style=feature:transit.station|element:geometry|color:0xeeeeee&style=feature:water|element:geometry|color:0xc9c9c9&style=feature:water|element:labels.text.fill|color:0x9e9e9e" 
+                       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23757.08354389184!2d12.422174714879548!3d41.90069670159018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132f60767f7cb583%3A0x6a8b13e2ac45edf0!2sQuartiere%20XIII%20Aurelio%2C%20Roma%20RM!5e0!3m2!1sit!2sit!4v1732057469802!5m2!1sit!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" 
                         width="100%" 
                         height="450" 
                         style="border:0;" 
